# DexDiffNdk

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/dexdiffndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/example/dexdiffndk/: BsPatchUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/dexdiffndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
